Fix buttons wrapping to 2nd row #4 #5
Project buttons wrap to 2nd row on narrow viewports.
Make side menu slightly narrower.
Reduce margin between GitHub mark and text.

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -100,8 +100,9 @@ $theme-colors: map-merge($theme-colors,
 }
 
 // Fix width of side menu on wider viewports
-$pf-menu-width: 260px;
 //$pf-menu-width: 15vw;
+//$pf-menu-width: 260px;
+$pf-menu-width: 250px;
 
 @media (min-width: 768px) {
     .pf-portfolio-project-nettmatters {
